Move secrets to env vars, fix CORS config, add Spring milestone repo